# aoc

./: .gitattributes  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
2023/: Cargo.toml
2023/src/: days.rs  main.rs
2023/src/days/one/: mod.rs
2023/src/days/three/: mod.rs
2023/src/days/two/: mod.rs
common/: Cargo.toml
common/src/: lib.rs
runner/: Cargo.toml
runner/benches/: main.rs
runner/src/: main.rs
solutions/: Cargo.toml
solutions/src/: lib.rs  utils.rs
solutions/src/_2023/: mod.rs
solutions/src/_2023/eight/: mod.rs
solutions/src/_2023/one/: mod.rs
solutions/src/_2023/three/: mod.rs
solutions/src/_2023/two/: mod.rs
solutions/src/_2024/: mod.rs
solutions/src/_2024/_example/: mod.rs
solutions/src/_2024/five/: mod.rs
solutions/src/_2024/four/: mod.rs
solutions/src/_2024/one/: mod.rs
solutions/src/_2024/seven/: mod.rs
solutions/src/_2024/six/: mod.rs
solutions/src/_2024/three/: mod.rs
solutions/src/_2024/two/: mod.rs
solutions/src/utils/: mod.rs  slice_2d.rs
src/: _year_SLASH_day.rs  lib.rs  main.rs
src/_2023/: _2.rs  _3.rs  _8.rs  eight.rs  mod.rs  one.rs  three.rs  two.rs
src/_2024/: _04.rs  _06.rs  _13.rs  _14.rs  _15.rs  _3.rs  _7.rs  five.rs  four.rs  mod.rs  one.rs  ten.rs  three.rs  two.rs
