[workspace]
resolver = "2"
members = ["2023", "common"]
default-members = ["2023"]

[workspace.dependencies]
# Logging crates
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["parking_lot", "tracing-log"] }

# Error handling crates
thiserror = "1.0.63"
color-eyre = "0.6.3"
eyre = "0.6.12"

# Misc. crates
memchr = "2.7.4"
