[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# QOL crates
easybench = "1.1.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "parking_lot",
    "tracing-log",
] }
thiserror = "1.0.63"
color-eyre = "0.6.3"
eyre = "0.6.12"

# Helpers for solutions
memchr = "2.7.4"
atoi_simd = "0.16.0"
ahash = "0.8.11"
regex = "1.11.1"
arrayvec = "0.7.6"

[profile.dev]
opt-level = 2
