[package]
name = "aoc_runner"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Logging crates
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling crates
thiserror = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
aoc_solutions = { path = "../solutions" }
memchr = { workspace = true }
rayon = "1.10.0"
