[package]
name = "aoc_runner"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Logging crates
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling crates
thiserror = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }

# Other crates
aoc_solutions = { path = "../solutions" }
memchr = { workspace = true }
criterion = "0.5.1"

[[bench]]
name = "main"
harness = false
